Update and rename Dashbord.html to index.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <img src="logo.png" alt="Logo" class="logo">
     </div>
     <h2>Content Planner</h2>
-    <a href="Dashbord.html">Dashboard</a>
+    <a href="index.html">Dashboard</a>
     <a href="calendar.html">Calendar</a>
     <a href="idea.html">Ideas</a>
     <a href="Create Post.html">Create Post</a>
